main/default/objects/ICB__c/fields/Access_OM_ASD_Price_Improvement_c__c.field-meta.xml
<CustomField>
    <fullName>Access_OM_ASD_Price_Improvement_c__c</fullName>
    <label>Access OM ASD Price Improvement</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>