main/default/objects/ICB__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The account that this ICB is associated with</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ICBs</relationshipLabel>
    <relationshipName>ICB_RequestsToAccount</relationshipName>
    <type>Lookup</type>
</CustomField>