main/default/objects/ICB__c/fields/Account_Business_Segment__c.field-meta.xml
<CustomField>
    <fullName>Account_Business_Segment__c</fullName>
    <formula>TEXT(Opportunity__r.Account.Account_Sales_Channel__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Business Segment</label>
    <type>Text</type>
</CustomField>