main/default/objects/ICB__c/fields/Account_Executives_State__c.field-meta.xml
<CustomField>
    <fullName>Account_Executives_State__c</fullName>
    <description>Formula field that displays the State from the Account Executive&#39;s Office State from the User object.</description>
    <formula>AccountExecutive__r.State</formula>
    <inlineHelpText>System Maintained Field:  Displays the Account Executive&#39;s State.</inlineHelpText>
    <label>Account Executives State</label>
    <type>Text</type>
</CustomField>