main/default/objects/ICB__c/fields/AccountExecutive__c.field-meta.xml
<CustomField>
    <fullName>AccountExecutive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AE associated to an ICB - possibly the one creating the ICB</description>
    <inlineHelpText>AE associated to an ICB - possibly the one creating the ICB</inlineHelpText>
    <label>Account Executive</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Sales</value>
        </filterItems>
        <infoMessage>Filtered on AEs, search all if needed</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>ICB_RequestsToUserForAE</relationshipName>
    <type>Lookup</type>
</CustomField>