main/default/objects/ICB__c/fields/Additional_Terms_and_Conditions_History__c.field-meta.xml
<CustomField>
    <fullName>Additional_Terms_and_Conditions_History__c</fullName>
    <description>Field to store the current and prior values of the Additional Terms and Conditions field which is a long text field so normal field history doesn&#39;t work well for us.  Maintained by workflow.</description>
    <inlineHelpText>System Maintained Field:  Keeps history of changes to the Additional Terms and Conditions field.</inlineHelpText>
    <label>Additional Terms and Conditions History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>