main/default/objects/ICB__c/fields/AEs_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>AEs_Job_Title__c</fullName>
    <description>Formula field gets the Title field from the Account Executive&#39;s User record</description>
    <formula>AccountExecutive__r.Title</formula>
    <inlineHelpText>System Maintained field:  Displays the job title of the Account Executive associated with this ICB.</inlineHelpText>
    <label>AEs Job Title</label>
    <type>Text</type>
</CustomField>