main/default/objects/ICB__c/fields/Allow_Satisfaction_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Allow_Satisfaction_Guarantee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will enable the printing of the satisfaction guarantee in CPQ if the ICB is approved.</description>
    <inlineHelpText>This checkbox will enable the printing of the satisfaction guarantee in CPQ if the ICB is approved.</inlineHelpText>
    <label>Allow Satisfaction Guarantee</label>
    <type>Checkbox</type>
</CustomField>