main/default/objects/ICB__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <description>Field used for reporting for the users who cannot see Administrative reports and therefore cannot see all pending requests.  This field will be set by Field Update in the Approval processes and by a workflow rule.</description>
    <inlineHelpText>System Maintained Field: Displays current status or step in the approval process.</inlineHelpText>
    <label>Approval Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>