main/default/objects/ICB__c/fields/Approval_Status_Secondary__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status_Secondary__c</fullName>
    <description>Text field that is set by the approval process and used by a workflow to send the second email to the Offer Management approvers.</description>
    <inlineHelpText>System Maintained Field:  Used to trigger the second email to the Offer Management Approvers</inlineHelpText>
    <label>Approval Status Secondary</label>
    <length>50</length>
    <type>Text</type>
</CustomField>