main/default/objects/ICB__c/fields/Approval_Waiting_Since__c.field-meta.xml
<CustomField>
    <fullName>Approval_Waiting_Since__c</fullName>
    <description>Field updated by the approval processes to indicate when the approval was moved to the next step.  This is used for reporting for users who cannot access Administrative reports.</description>
    <inlineHelpText>System Maintained Field:  During the approval process, this field displays the date and time when this ICB was sent to the current approver(s).</inlineHelpText>
    <label>Approval Waiting Since</label>
    <type>DateTime</type>
</CustomField>