main/default/objects/ICB__c/fields/ASD_Bandwidth_Speed__c.field-meta.xml
<CustomField>
    <fullName>ASD_Bandwidth_Speed__c</fullName>
    <description>Bandwidth used for Off-Net Quoting</description>
    <inlineHelpText>Bandwidth used for Off-Net Quoting</inlineHelpText>
    <label>Bandwidth/Speed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DS1</fullName>
            </value>
            <value>
                <fullName>2 Mbps</fullName>
            </value>
            <value>
                <fullName>10 Mbps</fullName>
            </value>
            <value>
                <fullName>20 Mbps</fullName>
            </value>
            <value>
                <fullName>30 Mbps</fullName>
            </value>
            <value>
                <fullName>40 Mbps</fullName>
            </value>
            <value>
                <fullName>50 Mbps</fullName>
            </value>
            <value>
                <fullName>100 Mbps</fullName>
            </value>
            <value>
                <fullName>1 Gig</fullName>
            </value>
            <value>
                <fullName>1 Gig Wave</fullName>
            </value>
            <value>
                <fullName>10 Gig</fullName>
            </value>
            <value>
                <fullName>Dark Fiber</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>