main/default/objects/ICB__c/fields/ASD_Cycle_Time__c.field-meta.xml
<CustomField>
    <fullName>ASD_Cycle_Time__c</fullName>
    <formula>IF(NOT(ISNULL(ASD_Complete__c)), ASD_Complete__c - ASD_Start__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ASD Cycle Time</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>