main/default/objects/ICB__c/fields/ASD_Delay_Time__c.field-meta.xml
<CustomField>
    <fullName>ASD_Delay_Time__c</fullName>
    <formula>IF(NOT(ISNULL(ASD_Start__c)), ASD_Start__c - Submitted_On__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ASD Delay Time</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>