main/default/objects/ICB__c/fields/ASD_NRC__c.field-meta.xml
<CustomField>
    <fullName>ASD_NRC__c</fullName>
    <description>NRC used for Off-Net Quoting solution</description>
    <inlineHelpText>NRC used for Off-Net Quoting solution</inlineHelpText>
    <label>NRC</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>