main/default/objects/ICB__c/fields/ASD_OM_Wait_Time__c.field-meta.xml
<CustomField>
    <fullName>ASD_OM_Wait_Time__c</fullName>
    <description>The time it takes for the ICB to go from Submitted to New in the ASD Queue</description>
    <formula>IF(NOT(ISNULL(ASD_Queued__c)),  ASD_Queued__c  -  Submitted_On__c , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The time it takes for the ICB to go from Submitted to New in the ASD Queue</inlineHelpText>
    <label>ASD OM Wait Time</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>