main/default/objects/ICB__c/fields/ASD_Reject_Reason__c.field-meta.xml
<CustomField>
    <fullName>ASD_Reject_Reason__c</fullName>
    <description>ASD Reason for rejecting ICB</description>
    <inlineHelpText>ASD Reason for rejecting ICB</inlineHelpText>
    <label>ASD Reject Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Missing Info</fullName>
            </value>
            <value>
                <fullName>Address Not Validated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>