main/default/objects/ICB__c/fields/ASD_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>ASD_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Enter the name of the ASD Team Member providing the costing for this ICB</description>
    <inlineHelpText>Enter the name of the ASD Team Member providing the costing for this ICB</inlineHelpText>
    <label>ASD Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ICB_ASD_Reviewer</relationshipName>
    <type>Lookup</type>
</CustomField>