main/default/objects/ICB__c/fields/ASD_Service_State__c.field-meta.xml
<CustomField>
    <fullName>ASD_Service_State__c</fullName>
    <description>State of selected Service Location</description>
    <formula>Service_Location__r.Building__r.State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>State of selected Service Location</inlineHelpText>
    <label>Service State</label>
    <type>Text</type>
</CustomField>