main/default/objects/ICB__c/fields/ASD_SLA_Timeframe__c.field-meta.xml
<CustomField>
    <fullName>ASD_SLA_Timeframe__c</fullName>
    <label>ASD SLA Timeframe</label>
    <type>Date</type>
</CustomField>