main/default/objects/ICB__c/fields/Assignment_COC__c.field-meta.xml
<CustomField>
    <fullName>Assignment_COC__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if modification made to Assignment/COC</inlineHelpText>
    <label>Assignment/COC</label>
    <type>Checkbox</type>
</CustomField>