main/default/objects/ICB__c/fields/Assignment_COC_Notes__c.field-meta.xml
<CustomField>
    <fullName>Assignment_COC_Notes__c</fullName>
    <inlineHelpText>Summarize what restrictions we have for assigning a contract</inlineHelpText>
    <label>Assignment/COC Notes</label>
    <type>TextArea</type>
</CustomField>