main/default/objects/ICB__c/fields/Auto_Renewal_Exemption__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewal_Exemption__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field for flagging contracts where &quot;Evergreen Clause&quot; was removed from the final MSA and doesn&#39;t apply to this contract.</description>
    <inlineHelpText>Field for flagging contracts where &quot;Evergreen Clause&quot; was removed from the final MSA and doesn&#39;t apply to this contract.</inlineHelpText>
    <label>Auto-Renewal Exemption</label>
    <type>Checkbox</type>
</CustomField>