main/default/objects/ICB__c/fields/Business_Downturn_Location_Downturn__c.field-meta.xml
<CustomField>
    <fullName>Business_Downturn_Location_Downturn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box field for approval of Business Downturn Addendum Location Downturn</description>
    <inlineHelpText>Checked by Offer Management if Business Downturn Addendum Location Downturn is approved</inlineHelpText>
    <label>Business Downturn - Location Downturn</label>
    <type>Checkbox</type>
</CustomField>