main/default/objects/ICB__c/fields/Business_Downturn_Service_Reduction__c.field-meta.xml
<CustomField>
    <fullName>Business_Downturn_Service_Reduction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box field for approval of Business Downturn Addendum Service Reduction</description>
    <inlineHelpText>Checked by Offer Management if Business Downturn Addendum Service Reduction is approved</inlineHelpText>
    <label>Business Downturn - Service Reduction</label>
    <type>Checkbox</type>
</CustomField>