main/default/objects/ICB__c/fields/Business_Move_Addendum__c.field-meta.xml
<CustomField>
    <fullName>Business_Move_Addendum__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Move Addendum</label>
    <type>Checkbox</type>
</CustomField>