main/default/objects/ICB__c/fields/Capital_Project__c.field-meta.xml
<CustomField>
    <fullName>Capital_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Capital Projects</description>
    <label>Capital Project</label>
    <referenceTo>Capital_Project__c</referenceTo>
    <relationshipLabel>ICBs</relationshipLabel>
    <relationshipName>ICBs</relationshipName>
    <type>Lookup</type>
</CustomField>