main/default/objects/ICB__c/fields/Catalog_Change__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field</description>
    <inlineHelpText>Completed by the Product Manager only.  This needs to be checked if the final approved ICB needs and updates made to the produt catalogs</inlineHelpText>
    <label>Catalog Change</label>
    <type>Checkbox</type>
</CustomField>