main/default/objects/ICB__c/fields/Catalog_Change_Required_Verbiage_AE_SE__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Change_Required_Verbiage_AE_SE__c</fullName>
    <description>Formula field that is used in email templates to the AE and Sales Engineer to display the value of the Catalog Change checkbox field.</description>
    <formula>IF( Catalog_Change__c , &quot;A Catalog Change is required.  You will be updated within 48 hours.&quot;, &quot;.&quot;)</formula>
    <inlineHelpText>System Maintained Field: Used in email templates to indicate whether the Catalog Change checkbox field is checked or not.</inlineHelpText>
    <label>Catalog Change Required Verbiage AE SE</label>
    <type>Text</type>
</CustomField>