main/default/objects/ICB__c/fields/Catalog_Change_Required_Verbiage_ProdMgr__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Change_Required_Verbiage_ProdMgr__c</fullName>
    <description>Formula field that is used in email templates to the Product Manager to display the value of the Catalog Change checkbox field.</description>
    <formula>IF( Catalog_Change__c , &quot;A Catalog change has been requested, please create a task and assign it to Angie Johnson. Select Sales Enablement - ICB as the task type and subject. Please remember to paste the required template into the task request.&quot;, &quot;.&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Catalog Change Required Verbiage ProdMgr</label>
    <type>Text</type>
</CustomField>