main/default/objects/ICB__c/fields/Commission_Review__c.field-meta.xml
<CustomField>
    <fullName>Commission_Review__c</fullName>
    <description>To be filled out by Offer Management.  Comments regarding the commission and it&#39;s impact on the overall financial viability of the deal.</description>
    <inlineHelpText>To be filled out by Offer Management.  Comments regarding the commission and it&#39;s impact on the overall financial viability of the deal.</inlineHelpText>
    <label>Commission Review</label>
    <type>TextArea</type>
</CustomField>