main/default/objects/ICB__c/fields/Confidentiality_Notes__c.field-meta.xml
<CustomField>
    <fullName>Confidentiality_Notes__c</fullName>
    <inlineHelpText>Summarize what types of changes have been made to out confidentiality Language</inlineHelpText>
    <label>Confidentiality Notes</label>
    <type>TextArea</type>
</CustomField>