main/default/objects/ICB__c/fields/Contract_Changes_Needed_del__c.field-meta.xml
<CustomField>
    <fullName>Contract_Changes_Needed_del__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field that indicates whether Terms and Conditions are requesting to be modified</description>
    <inlineHelpText>Check here if any legal modifications or addendums are needed to the Contract or SLA.</inlineHelpText>
    <label>Contract Changes Needed</label>
    <type>Checkbox</type>
</CustomField>