main/default/objects/ICB__c/fields/CoS_LoS__c.field-meta.xml
<CustomField>
    <fullName>CoS_LoS__c</fullName>
    <description>CoS/LoS for Off-Net Quoting solution</description>
    <inlineHelpText>CoS/LoS for Off-Net Quoting solution</inlineHelpText>
    <label>CoS/LoS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Premium/Dedicated</fullName>
            </value>
            <value>
                <fullName>Best Effort/Shared</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>