main/default/objects/ICB__c/fields/Credit_Amount_Approved__c.field-meta.xml
<CustomField>
    <fullName>Credit_Amount_Approved__c</fullName>
    <description>Currency field indicating the amount the customer is approved for credit</description>
    <inlineHelpText>Entered by Offer Management:  Dollar amount the account has been approved for credit.</inlineHelpText>
    <label>ETF Credit Amount Approved</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>