main/default/objects/ICB__c/fields/Credit_Type_Approval__c.field-meta.xml
<CustomField>
    <fullName>Credit_Type_Approval__c</fullName>
    <description>Picklist field indicating type of credit approval</description>
    <inlineHelpText>Completed by Offer Management.  Indicate the type of Credit Approval you are giving.</inlineHelpText>
    <label>Credit Type Approval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ETF Program</fullName>
            </value>
            <value>
                <fullName>Incentive Credit</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>