main/default/objects/ICB__c/fields/Freeze_Terms__c.field-meta.xml
<CustomField>
    <fullName>Freeze_Terms__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Our current Terms of Service allow Allstream to update the terms at anytime without notice.  Freezing the Terms stops us from being able to do this.</inlineHelpText>
    <label>Freeze Terms</label>
    <type>Checkbox</type>
</CustomField>