main/default/objects/ICB__c/fields/Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin__c</fullName>
    <description>The expected gross margin percent for this request</description>
    <inlineHelpText>Please enter the expected gross margin percent. E.g enter 25 for 25%.</inlineHelpText>
    <label>Gross Margin %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>