main/default/objects/ICB__c/fields/ICB_Code_Search__c.field-meta.xml
<CustomField>
    <fullName>ICB_Code_Search__c</fullName>
    <label>ICB Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>