main/default/objects/ICB__c/fields/ICB_Request_Version__c.field-meta.xml
<CustomField>
    <fullName>ICB_Request_Version__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Field to track the ICB number in SFDC.  This will be updated via workflow field update to auto-increment.</description>
    <label>ICB Request Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>