main/default/objects/ICB__c/fields/iCert_Number__c.field-meta.xml
<CustomField>
    <fullName>iCert_Number__c</fullName>
    <description>Text field to hold the iCert number associated with this ICB</description>
    <inlineHelpText>Enter the iCert Number if you know it.</inlineHelpText>
    <label>iCert Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>