main/default/objects/ICB__c/fields/iCert_Required__c.field-meta.xml
<CustomField>
    <fullName>iCert_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field that AE or others would check if they know an iCert will be required based on this ICB.</description>
    <inlineHelpText>Check if you know that an iCert will be required.</inlineHelpText>
    <label>iCert Required</label>
    <type>Checkbox</type>
</CustomField>