main/default/objects/ICB__c/fields/ISP_Engineering_Review_Required__c.field-meta.xml
<CustomField>
    <fullName>ISP_Engineering_Review_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field set by workflow based on the product.  Used in approval process optionally to send to Engineering ISP queue.</description>
    <inlineHelpText>System Maintained Field:  Set based on the product.</inlineHelpText>
    <label>Virtual Comm (ISP) Engineer Required</label>
    <type>Checkbox</type>
</CustomField>