main/default/objects/ICB__c/fields/Legal_Review_Required_for_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Legal_Review_Required_for_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox indicating whether Legal should be included in the Pricing approval flow</description>
    <inlineHelpText>Maintained Offer Management:  Indicate whether you need Legal to review this pricing ICB.  They will be added to the approval flow.</inlineHelpText>
    <label>Legal Review Required for Pricing</label>
    <type>Checkbox</type>
</CustomField>