main/default/objects/ICB__c/fields/Legal_Review_Required_for_Technical__c.field-meta.xml
<CustomField>
    <fullName>Legal_Review_Required_for_Technical__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox that Product Manager will occasionnally use.</description>
    <inlineHelpText>Completed by Product Manager:  Check if you want Legal to review this as the final Technical ICB step.</inlineHelpText>
    <label>Legal Review Required for Technical</label>
    <type>Checkbox</type>
</CustomField>