main/default/objects/ICB__c/fields/Liability_Indemnity_Notes__c.field-meta.xml
<CustomField>
    <fullName>Liability_Indemnity_Notes__c</fullName>
    <inlineHelpText>Summarize any changes made to Liability / Indemnity</inlineHelpText>
    <label>Liability / Indemnity Notes</label>
    <type>TextArea</type>
</CustomField>