main/default/objects/ICB__c/fields/MFN__c.field-meta.xml
<CustomField>
    <fullName>MFN__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if MDF Approved</inlineHelpText>
    <label>MFN (Most Favored Nation)</label>
    <type>Checkbox</type>
</CustomField>