main/default/objects/ICB__c/fields/MFN_Notes__c.field-meta.xml
<CustomField>
    <fullName>MFN_Notes__c</fullName>
    <inlineHelpText>This means we have to charge this customer the lowest rate that we are charging any other customer.  Dan Carusso needs to approve</inlineHelpText>
    <label>MFN Notes</label>
    <type>TextArea</type>
</CustomField>