main/default/objects/ICB__c/fields/New_Notice_of_Days__c.field-meta.xml
<CustomField>
    <fullName>New_Notice_of_Days__c</fullName>
    <inlineHelpText>New notice period, if other please note in notice notes</inlineHelpText>
    <label>New Notice # of Days</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>120</fullName>
            </value>
            <value>
                <fullName>360</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>