main/default/objects/ICB__c/fields/NPA_NXX_or_CLLI__c.field-meta.xml
<CustomField>
    <fullName>NPA_NXX_or_CLLI__c</fullName>
    <description>NPA-NXX or CLLI for Off-Net Quoting</description>
    <inlineHelpText>NPA-NXX or CLLI for Off-Net Quoting</inlineHelpText>
    <label>NPA-NXX or CLLI</label>
    <length>16</length>
    <type>Text</type>
</CustomField>