main/default/objects/ICB__c/fields/NRC_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>NRC_Credit_Amount__c</fullName>
    <description>Amount of one time credit selected.</description>
    <inlineHelpText>Enter in the one time credit amount</inlineHelpText>
    <label>NRC Credit Amount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>