main/default/objects/ICB__c/fields/Number_of_Days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days__c</fullName>
    <description>Number of days past effective date that ETF credit is valid.</description>
    <inlineHelpText>Enter the number of days after effective date the ETF credit is valid.</inlineHelpText>
    <label>Number of Days</label>
    <length>50</length>
    <type>Text</type>
</CustomField>