main/default/objects/ICB__c/fields/of_Type_3_Sites_Outside_of_Footprint__c.field-meta.xml
<CustomField>
    <fullName>of_Type_3_Sites_Outside_of_Footprint__c</fullName>
    <label># of Type 3 Sites (Outside of Footprint)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>