main/default/objects/ICB__c/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <description>Formula field that gets the value of the Stage field from the related Opportunity.</description>
    <formula>TEXT( Opportunity__r.StageName )</formula>
    <inlineHelpText>System maintained field: Stage of the Related Opportunity</inlineHelpText>
    <label>Opportunity Stage</label>
    <type>Text</type>
</CustomField>