main/default/objects/ICB__c/fields/Payment_Terms_LPC__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_LPC__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if modifications made to payment terms or LPC (Late Payment Charges)</inlineHelpText>
    <label>Payment Terms / LPC</label>
    <type>Checkbox</type>
</CustomField>