main/default/objects/ICB__c/fields/Payment_Terms_LPC_Notes__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_LPC_Notes__c</fullName>
    <inlineHelpText>Summarize changes made to Payment Terms / LPC</inlineHelpText>
    <label>Payment Terms / LPC Notes</label>
    <type>TextArea</type>
</CustomField>