main/default/objects/ICB__c/fields/Planning_Time__c.field-meta.xml
<CustomField>
    <fullName>Planning_Time__c</fullName>
    <description>Calculated number of days between created and submitted dates</description>
    <formula>IF(NOT(ISNULL(Submitted_On__c)), Submitted_On__c -  CreatedDate, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated number of days between created and submitted dates</inlineHelpText>
    <label>Planning Time</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>