main/default/objects/ICB__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Same picklist field as the Opportunity.  Needed for another dependent picklist.</description>
    <inlineHelpText>Same picklist field as the Opportunity. This field will default based on the product selected on the opportunity.  If you require an ICB for multiple products please create an ICB for each product and select something other than the default as needed.</inlineHelpText>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ICB_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIP</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>UC</fullName>
            </value>
            <value>
                <fullName>Traditional Voice</fullName>
            </value>
            <value>
                <fullName>Access Service</fullName>
                <isActive>false</isActive>
                <label>Access Service</label>
            </value>
            <value>
                <fullName>Basic Voice Services</fullName>
                <isActive>false</isActive>
                <label>Basic Voice Services</label>
            </value>
            <value>
                <fullName>Broadband Bundle</fullName>
                <isActive>false</isActive>
                <label>Broadband Bundle</label>
            </value>
            <value>
                <fullName>Business Connect Bundles</fullName>
                <isActive>false</isActive>
                <label>Business Connect Bundles</label>
            </value>
            <value>
                <fullName>Cloud Connect</fullName>
                <isActive>false</isActive>
                <label>Cloud Connect</label>
            </value>
            <value>
                <fullName>Cloud Firewall Service</fullName>
                <isActive>false</isActive>
                <label>Cloud Firewall Service</label>
            </value>
            <value>
                <fullName>Collaboration &amp; Messaging</fullName>
                <isActive>false</isActive>
                <label>Collaboration &amp; Messaging</label>
            </value>
            <value>
                <fullName>Colocation Services</fullName>
                <isActive>false</isActive>
                <label>Colocation Services</label>
            </value>
            <value>
                <fullName>Conference Now</fullName>
                <isActive>false</isActive>
                <label>Conference Now</label>
            </value>
            <value>
                <fullName>DDoS Mitigation Service</fullName>
                <isActive>false</isActive>
                <label>DDoS Mitigation Service</label>
            </value>
            <value>
                <fullName>DSL/Broadband</fullName>
                <isActive>false</isActive>
                <label>DSL/Broadband</label>
            </value>
            <value>
                <fullName>DSL/Broadband w/Voice</fullName>
                <isActive>false</isActive>
                <label>DSL/Broadband w/Voice</label>
            </value>
            <value>
                <fullName>Dark Fiber</fullName>
                <isActive>false</isActive>
                <label>Dark Fiber</label>
            </value>
            <value>
                <fullName>Dark Fiber (ICB Required)</fullName>
                <isActive>false</isActive>
                <label>Dark Fiber (ICB Required)</label>
            </value>
            <value>
                <fullName>Dedicated DSL/Broadband</fullName>
                <isActive>false</isActive>
                <label>Dedicated DSL/Broadband</label>
            </value>
            <value>
                <fullName>Dedicated HS Internet - Usage-Based</fullName>
                <isActive>false</isActive>
                <label>Dedicated HS Internet - Usage-Based</label>
            </value>
            <value>
                <fullName>Dedicated High-Speed Internet</fullName>
                <isActive>false</isActive>
                <label>Dedicated High-Speed Internet</label>
            </value>
            <value>
                <fullName>Dedicated Internet</fullName>
                <isActive>false</isActive>
                <label>Dedicated Internet</label>
            </value>
            <value>
                <fullName>Dedicated Internet Access</fullName>
                <isActive>false</isActive>
                <label>Dedicated Internet Access</label>
            </value>
            <value>
                <fullName>Dedicated Internet-Usage Based</fullName>
                <isActive>false</isActive>
                <label>Dedicated Internet-Usage Based</label>
            </value>
            <value>
                <fullName>Ethernet Private Line (E-Line)</fullName>
                <isActive>false</isActive>
                <label>Ethernet Private Line (E-Line)</label>
            </value>
            <value>
                <fullName>Ethernet Services E-LAN</fullName>
                <isActive>false</isActive>
                <label>Ethernet Services E-LAN</label>
            </value>
            <value>
                <fullName>Ethernet Services E-LINE</fullName>
                <isActive>false</isActive>
                <label>Ethernet Services E-LINE</label>
            </value>
            <value>
                <fullName>Ethernet Virtual Private Line (E-Line)</fullName>
                <isActive>false</isActive>
                <label>Ethernet Virtual Private Line (E-Line)</label>
            </value>
            <value>
                <fullName>Hosted PBX</fullName>
                <isActive>false</isActive>
                <label>Hosted PBX</label>
            </value>
            <value>
                <fullName>Hosted Voice Services</fullName>
                <isActive>false</isActive>
                <label>Hosted Voice Services</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>